youtube-search-react/index.css
html,body {
	width:100%;
	height:100vh;
	margin:0px;
	overflow: hidden;
}

.searchBar{
	width:60%;
	height:5vh;
	margin-top:4vh;
}

.videoPanel{
	margin-top:4vh;
	margin-left:20px;
	height:85vh;
}

.videoContainer {
	margin-left:3%;
	margin-top:4vh;
	height:85vh;
	overflow:auto;
	border:1px solid #C3C3C3;
}

.videoItem {
	margin-top:10px;
	cursor:pointer;
	transition:background 1s;
}

.videoItem:hover {
	background:#E2E2E2;
}

.videoImg {
	display: inline-block;
	width:100%;
	height:140px;
}

.videoTitle {
	list-style: none;
	font-weight:bold;
}

.selectedVideo {
	width:100%;
	height:90%;
	padding:none;
	margin:none;
	border:0px;
}

.selectedVideoDescription {
	width:100%;
	height:10%;
	overflow:auto;
	text-align: left;
	font-size:20px;
	font-family:Aref Ruqaa;
}

